@@ -380,9 +380,11 @@ same_file (char *path1, char *path2)
   char fullpath1 [MAXPATHLEN + 1] = {0};
   char fullpath2 [MAXPATHLEN + 1] = {0};
 
-  return 
-    idl_global->path_cmp (ACE_OS::realpath(path1, fullpath1),
-                          ACE_OS::realpath(path2, fullpath2)) == 0;
+  char * fp1 = ACE_OS::realpath(path1, fullpath1);
+  char * fp2 = ACE_OS::realpath(path2, fullpath2);
+
+  return (fp1 == 0 || fp2 == 0) ? false :
+    idl_global->path_cmp (fullpath1,fullpath2) == 0;
 }
 
 // Parse a #line statement generated by the C preprocessor
